[tool.poetry]
name = "cipher_yz4122"
version = "0.1.0"
description = "Python packages for encrypting and decrypting text"
authors = ["Yixiao Zhou"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
